@@ -2,6 +2,8 @@
 
 	* doc/sdccman.lyx:
 	  Document stm8 memory models (RFE #556).
+	* src/stm8/gen.c:
+	  Do not generate jump tables for stm8 large memory model (RFE #556).
 
 2016-02-27 Philipp Klaus Krause <pkk AT spth.de>
 
